# cmdmind

./: .gitignore  LICENSE  README.md  pyproject.toml
cmdmind/: __init__.py  cli.py
cmdmind/core/: __init__.py  analyzer.py  classifier.py  database.py  searcher.py
cmdmind/ui/: __init__.py  app.py
cmdmind/utils/: __init__.py  helpers.py
tests/: conftest.py  test_cmdmind.py
