[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdmind"
version = "1.0.0"
description = "AI-Powered Terminal Command Intelligence - Smart command history management with semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CmdMind Team", email = "cmdmind@example.com" }
]
keywords = [
    "terminal", "command", "history", "cli", "tui", "ai", "semantic-search",
    "developer-tools", "productivity", "shell"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "sqlite-utils>=3.36",
    "pyperclip>=1.8.2",
    "rapidfuzz>=3.6.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
cmdmind = "cmdmind.cli:app"

[project.urls]
Homepage = "https://github.com/gitstq/cmdmind"
Documentation = "https://github.com/gitstq/cmdmind#readme"
Repository = "https://github.com/gitstq/cmdmind"
Issues = "https://github.com/gitstq/cmdmind/issues"

[tool.hatch.build.targets.wheel]
packages = ["cmdmind"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
